# claude-gran-cassa

./: .gitignore  pyproject.toml
src/claude_gran_cassa/: composer.py  config.py  midi.py  models.py  parser.py
src/claude_gran_cassa/audio/: engine.py
src/claude_gran_cassa/cli/: evolve.py  generate.py  main.py  play.py  utils.py
tests/: test_composer.py  test_midi.py  test_models.py
